add c39_shSynTrans to test variable v parameter implementation

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -402,6 +402,8 @@ cfg$gms$cm_Full_Integration    <- "off"   # def = off
 cfg$gms$c_CO2priceDependent_AdjCosts    <- "on"   # def = on
 cfg$gms$c_scaleEmiHistorical   <- "on"    # def = on
 
+cfg$gms$c39_shSynTrans <- "variable"   # def = variable, or parameter
+
 # MAGICC configuration (AJS)
 # Calibrate year 2000 temperature to HADCRUT4 data (which is very close to AR5).
 cfg$gms$cm_magicc_calibrateTemperature2000 <- "uncalibrated" # def = uncalibrated;  {uncalibrated, HADCRUT4  }
