Mappings EDGE-T added to files shipped to output folder.

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -470,7 +470,9 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "config/input_ref.gdx",
                             "core/magicc",
                             ".Rprofile",
-                            "config/mappingEDGEtoREMINDsectors.csv")
+                            "modules/35_transport/edge_esm/input/EDGEscenario_description.csv",
+                            "modules/35_transport/edge_esm/input/mapping_CESnodes_EDGE.csv",
+                            "modules/35_transport/edge_esm/input/mapping_EDGE_REMIND_transport_categories.csv")
 
 # Files that should be copied after the REMIND run is finished
 cfg$files2export$end <- NULL
