add c29_SHAPE_industry_demand to select SSP trajectory for industry demand (during calibration)  independent of the population/GDP trajectories

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -448,6 +448,8 @@ cfg$gms$cm_startIter_EDGET <- 14 # def 14, EDGE-T coupling starts at 14, if you 
 
 cfg$gms$cm_altFeEmiFac <- "off"  # def <- "off", region that should use alternative data from "umweltbundesamt" on emission factors for final energy carriers
 
+### SHAPE switches ----
+cfg$gms$c29_SHAPE_industry_demand <- "off"   # def <- "off", options same as cm_GDPscen
 ### INNOPATHS switches ###
 
 #Calibration
@@ -847,6 +849,12 @@ cfg$gms$c_fuelprice_init <- "off"
 #cm_vehiclesSubsidies "default = off. If "on" applies country specific BEV and FCEV subsidies from 2020 onwards"
 #cm_calibration_string "def = off, else = additional string to include in the calibration name to be used"
 #cm_calibration_FE overwritte default fe trajectories with low, medium and high alternatives for buildings, transport and industry
+#
+# c29_SHAPE_industry_demand: overwrite ./core/input/pm_fe_demand.cs4r data with
+#    different SSP
+# (off):          use default data
+# (gdp_SSP1-5):   use SSP1-5 data for industry demand in calibration
+#
 #cm_gdximport_target             "whether or not the starting value for iteratively adjusted budgets, tax scenarios, or forcing targets (emiscen 5,6,7,8,9) should be read in from the input.gdx";
 # (0): no import, the default starting value as specified in modules/21_tax/on/input/tax_CO2.inc, core/input/data_emibudget.inc, modules/15_climate/box/datainput.gms is used
 # (1): the values from the gdx are read in (works only if the gdx has a parameter value) ATTENTION: make sure that the values from the gdx have the right structure (e.g. regionally differentiated or not)
